Feat: Add fetching of cities and municipalities at once in region and province endpoints
