# src/routes/province.route.ts
@@ -7,6 +7,7 @@ import {
   getCities,
   getSubMunicipalities,
   getBarangays,
+  getCitiesMunicipalities,
 } from '../controllers/province.controller';
 
 const provinceRouter = Router();
@@ -15,6 +16,10 @@ provinceRouter.get('/', getProvinces);
 provinceRouter.get('/:provinceCode', getProvince);
 provinceRouter.get('/:provinceCode/municipalities', getMunicipalities);
 provinceRouter.get('/:provinceCode/cities', getCities);
+provinceRouter.get(
+  '/:provinceCode/cities-municipalities',
+  getCitiesMunicipalities,
+);
 provinceRouter.get('/:provinceCode/sub-municipalities', getSubMunicipalities);
 provinceRouter.get('/:provinceCode/barangays', getBarangays);
 
