# src/routes/region.route.ts
@@ -8,6 +8,7 @@ import {
   getCities,
   getSubMunicipalities,
   getBarangays,
+  getCitiesMunicipalities,
 } from '../controllers/region.controller';
 
 const regionRouter = Router();
@@ -17,6 +18,7 @@ regionRouter.get('/:regionCode', getRegion);
 regionRouter.get('/:regionCode/provinces', getProvinces);
 regionRouter.get('/:regionCode/municipalities', getMunicipalities);
 regionRouter.get('/:regionCode/cities', getCities);
+regionRouter.get('/:regionCode/cities-municipalities', getCitiesMunicipalities);
 regionRouter.get('/:regionCode/sub-municipalities', getSubMunicipalities);
 regionRouter.get('/:regionCode/barangays', getBarangays);
 
